media/plex/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: plex
  namespace: media
spec:
  ports:
  - name: plex
    port: 80
    targetPort: 32400
  selector:
    app: plex
