media/plex/ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: plex
  namespace: media
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-plex
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Plex"
spec:
  tls:
  - hosts:
    - plex.thuault.com
    secretName: plex-tls
  rules:
  - host: plex.thuault.com
    http:
      paths:
      - path: /
        backend:
          serviceName: plex
          servicePort: 80
